# bidet-phone

./: .gitmodules  BIDET_PHONE_BRIEF.md  BUILD.md  GEMMA_TERMS.md  NOTICE  README.md  UPSTREAM_GALLERY_SHA.md  UPSTREAM_MOONSHINE.md  UPSTREAM_WHISPER.md
.github/workflows/: build_android.yaml
Android/src/: build.gradle.kts  gradle.properties
Android/src/app/: build.gradle.kts  debug.keystore  proguard-rules.pro
Android/src/app/src/gemma/res/drawable/: ic_launcher_background_flavor.xml  ic_launcher_foreground_letter.xml
Android/src/app/src/main/: AndroidManifest.xml
Android/src/app/src/main/assets/moonshine/: .gitignore  README.md
Android/src/app/src/main/assets/prompts/: adhd_organizer.txt  analysis.txt  clean.txt  dysgraphic.txt  dyslexic.txt  email_draft.txt  expressive_default.txt  judges_default.txt  plain_language.txt  receptive_default.txt
Android/src/app/src/main/assets/whisper/: README.md
Android/src/app/src/main/cpp/: CMakeLists.txt  whisper_jni.c
Android/src/app/src/main/java/com/google/ai/edge/gallery/: Analytics.kt  GalleryApp.kt  GalleryApplication.kt  MainActivity.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/a11y/: A11yPreferences.kt  CleanFontChoice.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/audio/: AudioCaptureEngine.kt  WavConcatenator.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/chunk/: ChunkQueue.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/cleaning/: ChunkCleaner.kt  Glossary.kt  Prompts.kt  RawChunker.kt  RegexCanonicalizer.kt  TranscriptSanitizer.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/consent/: GemmaTermsConsentScreen.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/data/: BidetDatabase.kt  BidetSession.kt  BidetSessionDao.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/di/: BidetDatabaseModule.kt  BidetModule.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/download/: BidetModelProvider.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/ingest/: Tp3Sender.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/llm/: BidetSharedLiteRtEngineProvider.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/service/: CleanGenerationService.kt  EngineInitGate.kt  RecordingCapTimer.kt  RecordingCapWatcher.kt  RecordingCaps.kt  RecordingService.kt  StartupOrderRecorder.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/transcript/: DedupAlgorithm.kt  TranscriptAggregator.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/transcription/: GemmaAudioEngine.kt  MoonshineEngine.kt  TranscriptionEngine.kt  TranscriptionWorker.kt  WhisperEngine.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/bidet/ui/: AnalysisTabContent.kt  BidetGemmaClient.kt  BidetMainScreen.kt  BidetSettingsScreen.kt  BidetTabsScreen.kt  BidetTabsViewModel.kt  CleanTabContent.kt  DataStoreTabPrefRepository.kt  DiffHighlighter.kt  ForaiTabContent.kt  GemmaDownloadScreen.kt  GeneratableTabBody.kt  LiteRtBidetGemmaClient.kt  RawTabContent.kt  RecordingHeader.kt  SessionDetailScreen.kt  SessionExporter.kt  SessionsListScreen.kt  SupportAxis.kt  SupportPreset.kt  SupportPromptResolver.kt  Tab4Preset.kt  Tab4PromptResolver.kt  Tab4PromptSheet.kt  TabChipRow.kt  TabPref.kt  TabPrefEditorSheet.kt  TabPrefRepository.kt  TabState.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/customtasks/agentchat/: AgentChatScreen.kt  SkillManagerBottomSheet.kt  SkillManagerViewModel.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/customtasks/common/: CustomTask.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/customtasks/mobileactions/: MobileActionsScreen.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/customtasks/tinygarden/: TinyGardenScreen.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/data/: Config.kt  DataStoreRepository.kt  DownloadRepository.kt  Model.kt  Tasks.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/benchmark/: BenchmarkScreen.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/common/: ClickableLink.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/llmchat/: LlmChatScreen.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/llmsingleturn/: LlmSingleTurnScreen.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/modelmanager/: ModelManagerViewModel.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/navigation/: GalleryNavGraph.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/theme/: Type.kt
Android/src/app/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
Android/src/app/src/main/proto/: settings.proto
Android/src/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
Android/src/app/src/main/res/values/: strings.xml
Android/src/app/src/main/res/xml/: file_paths.xml
Android/src/app/src/moonshine/res/drawable/: ic_launcher_background_flavor.xml  ic_launcher_foreground_letter.xml  ic_launcher_monochrome_letter.xml
Android/src/app/src/moonshine/res/mipmap-anydpi-v26/: ic_launcher_round.xml
Android/src/app/src/test/java/com/google/ai/edge/gallery/bidet/a11y/: A11yPreferencesTest.kt  CleanFontAssetsTest.kt  OpenDyslexicFontAssetTest.kt
Android/src/app/src/test/java/com/google/ai/edge/gallery/bidet/branding/: FlavorBrandingTest.kt
Android/src/app/src/test/java/com/google/ai/edge/gallery/bidet/cleaning/: FakeGemmaEngine.kt  GlossaryTest.kt  InferenceMutexTest.kt  PromptsTest.kt  RawChunkerTest.kt  RegexCanonicalizerTest.kt  TranscriptSanitizerTest.kt
Android/src/app/src/whisper/res/drawable/: ic_launcher_background_flavor.xml  ic_launcher_foreground_letter.xml
Android/src/gradle/: ban-word-check.gradle.kts  libs.versions.toml
scripts/: generate_app_icon.py
tests/dedup_fixtures/: 01_clean_overlap.json  02_fuzzy_asr_variance.json  03_no_overlap.json  04_all_overlap.json  05_partial_mid_sentence.json
(+27 files in other folders)
